--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,6 +266,7 @@ jobs:
       - name: Create Installer
         shell: bash    
         run: | 
+          export VERSION="${{ steps.identify-build.outputs.build-tag }}-${{ runner.os }}"
           export PLATFORM_ABBR="win"
           export DEPLOY_TOOL="C:\Program Files (x86)\NSIS\makensis.exe"
           export DEPLOY_TARGET="ptcollab.nsi"
@@ -284,7 +285,7 @@ jobs:
           export DEPLOY_OPTS=(
             "-DVERSION=${VERSION}"
             "-DARCH=${ARCH}"
-            "-DIN_PATH=$(find -type d)"
+            "-DIN_PATH=\"$(find -maxdepth 1 -type d -name "ptcollab-*")\""
           )
           
           export UPSTREAM_URI="https://github.com/yuxshao/ptcollab/tree/master"
