--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -288,7 +288,7 @@ jobs:
             "-DIN_PATH=\"$(find -maxdepth 1 -type d -name "ptcollab-*")\""
           )
           
-          export UPSTREAM_URI="https://raw.githubusercontent.com/yuxshao/ptcollab/tree/master"
+          export UPSTREAM_URI="https://raw.githubusercontent.com/ewangreen4/ptcollab/tree/master" # change to yuxshao when merged
           curl -LO "${UPSTREAM_URI}/src/icon.ico"
           curl -LO "${UPSTREAM_URI}/res/header.bmp"
           curl -LO "${UPSTREAM_URI}/res/${DEPLOY_TARGET}"
