--- a/src/styles/dark/config.ini
+++ b/src/styles/dark/config.ini
@@ -57,6 +57,11 @@ BlackLeft=#1d1d1d
 BlackLeftInner=#141414
 Black=#000000
 
+[platform]
+WindowText="#e9e0c4"
+WindowCaption="#1d1d1d"
+WindowDark=true
+
 [fonts]
 Editor="Fira Sans"
 Meter="Fira Sans"
