--- a/src/styles/dark/config.ini
+++ b/src/styles/dark/config.ini
@@ -58,6 +58,7 @@ BlackLeftInner=#141414
 Black=#000000
 
 [platform]
+WindowBorder="#494949"
 WindowText="#e9e0c4"
 WindowCaption="#1d1d1d"
 WindowDark=true
