--- a/src/styles/dark/config.ini
+++ b/src/styles/dark/config.ini
@@ -60,7 +60,7 @@ Black=#000000
 [platform]
 WindowBorder="#494949"
 WindowText="#e9e0c4"
-WindowCaption="#1d1d1d"
+WindowCaption="#1f1f1f"
 WindowDark=true
 
 [fonts]
