Title Bar Customization (#90)

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,11 @@ qmake/config.tests/*/test
 
 # qtcreator generated files
 *.pro.user*
+CMakeLists.txt.user
 /.qtc-clangd/
 /.qtc_clangd/
+*.qtc_clangd/
+*.qtc-clangd/
 
 # xemacs temporary files
 *.flc
@@ -81,3 +84,6 @@ qmake/config.tests/*/test
 /bin/
 /build/
 /build32/
+
+# vscode
+.vscode
