--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           - { name: "Windows", os: windows-latest, make: nmake, qt_arch: win64_msvc2019_64, target_arch: amd64 }
           - { name: "Windows 32-bit", os: windows-latest, make: nmake, qt_arch: win32_msvc2019, target_arch: x86 }
           - { name: "macOS", os: macos-latest, make: "make -j2", qt_arch: clang_64 }
-          - { name: "Ubuntu", os: ubuntu-latest, make: "make -j2", qt_arch: gcc_64 }
+          - { name: "Ubuntu", os: ubuntu-20.04, make: "make -j2", qt_arch: gcc_64 }
       fail-fast: false
 
     name: ${{ matrix.config.name }}
@@ -105,7 +105,7 @@ jobs:
           # Building
           sudo apt install libogg-dev libvorbis-dev librtmidi-dev
           # Packaging
-          sudo apt install libgstreamer-plugins-base1.0-0 libfuse2
+          sudo apt install libgstreamer-plugins-base1.0-0
 
           wget -c -nv \
             "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
