Add short/exe name to desktop file keywords

--- a/res/ptcollab.desktop
+++ b/res/ptcollab.desktop
@@ -5,5 +5,5 @@ Comment=pxtone collab: multiplayer music editor
 Exec=ptcollab %f
 Icon=ptcollab
 Categories=Audio;AudioVideo;AudioVideoEditing;
-Keywords=music;chiptune;pxtone;
+Keywords=ptcollab;music;chiptune;pxtone;
 Terminal=false
