--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         config:
-          - { name: "Windows", os: windows-latest, make: nmake, qt_arch: win64_msvc2019_64, target_arch: amd64 }
+          - { name: "Windows", os: windows-latest, make: nmake, qt_arch: win64_msvc2019_64 }
           - { name: "Windows 32-bit", os: windows-latest, make: nmake, qt_arch: win32_msvc2019, target_arch: x86 }
           - { name: "macOS", os: macos-latest, make: "make -j2", qt_arch: clang_64 }
           - { name: "Ubuntu", os: ubuntu-18.04, make: "make -j2", qt_arch: gcc_64 }
@@ -73,22 +73,6 @@ jobs:
         uses: seanmiddleditch/gha-setup-vsdevenv@v3
         with:
           arch: ${{ matrix.config.target_arch }}
-
-      - name: Cache NSIS [Windows]
-        if: ${{ runner.os == 'Windows' }}
-        id: cache-nsis
-        uses: actions/cache@v3
-        with:
-          path: nsis-install.exe
-          key: NSIS 3.08
-
-      - name: Fetch NSIS [Windows]
-        if: ${{ runner.os == 'Windows' && steps.cache-nsis.outputs.cache-hit != 'true' }}
-        run: curl -Lo nsis-install.exe "https://prdownloads.sourceforge.net/nsis/nsis-3.08-setup.exe?download"
-
-      - name: Install NSIS [Windows]
-        if: ${{ runner.os == 'Windows' }}
-        run: powershell -Command "./nsis-install.exe /S"
 
       - name: Install Dependencies [macOS]
         if: ${{ runner.os == 'macOS' }}
@@ -192,9 +176,7 @@ jobs:
           fi
 
           export PACKAGE="ptcollab-${VERSION}-${ARCH}"
-          export artifact_dir="${PACKAGE}"
           export artifact_name="ptcollab-${PLATFORM_ABBR}.${PACKAGE_EXT}"
-          echo "::set-output name=artifact-dir::${artifact_dir}"
           echo "::set-output name=artifact-name::${artifact_name}"
 
           # Deployment of binary
@@ -238,26 +220,6 @@ jobs:
             tar -cvf- "${PACKAGE}" | gzip -9c > "${artifact_name}"
           fi
 
-      - name: Create Installer [Windows]
-        if: ${{ runner.os == 'Windows' }}
-        id: installer
-        run: |
-          export NSIS_TOOL='C:\Program Files (x86)\NSIS\makensis.exe'
-          export NSIS_OPTS=(
-            "-DVERSION=${{ steps.identify-build.outputs.build-tag }}"
-            "-DARCH=${{ matrix.config.target_arch }}"
-            "-DIN_PATH=${{ steps.package.outputs.artifact-dir }}"
-          )
-
-          cp src/icon.ico res/{header.bmp,ptcollab.nsi} ./
-          "${NSIS_TOOL}" ${NSIS_OPTS[@]} ptcollab.nsi
-
-          export PLATFORM_ABBR="win"
-          if [ "${{ matrix.config.target_arch }}" == "x86" ]; then
-            export PLATFORM_ABBR="${PLATFORM_ABBR}-x86"
-          fi
-          echo "::set-output name=artifact-name::ptcollab-install-${PLATFORM_ABBR}.exe"
-
       - name: Release
         if: steps.identify-build.outputs.release == 'true'
         uses: svenstaro/upload-release-action@v2
@@ -265,13 +227,4 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ steps.package.outputs.artifact-name }}
           asset_name: ${{ steps.package.outputs.artifact-name }}
-          tag: ${{ github.ref }}
-
-      - name: Release Installer [Windows]
-        if: ${{ runner.os == 'Windows' && steps.identify-build.outputs.release == 'true' }}
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.installer.outputs.artifact-name }}
-          asset_name: ${{ steps.installer.outputs.artifact-name }}
           tag: ${{ github.ref }}
